got some validation done on create user
